css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
  font-family: "Mooli", sans-serif;
}

body {
  background-color: #272525;
  /* background-image: url("../img/bg.jpg");
  background-size: cover;
  background-repeat: no-repeat; */
}

.container {
  display: flex;
  color: white;
  justify-content: space-between;
  align-items: center;
  margin: 2em 10%;
}

.container .title {
  font-size: 50px;
}

.container .headers li {
  display: inline-block;
  padding: 1em;
}

a {
  color: white;
  width: 100%;
  height: 100%;
  text-align: center;
}

/* Hero Section */

.hero {
  display: flex;
  justify-content: center;
  flex-direction: column;
  min-height: 85vh;
  margin: 0 10%;
  margin-top: -1em;
  color: white;
}

h1 {
  font-family: "Croissant One", cursive;
  font-size: 100px;
}

.description {
  font-size: 20px;
  margin-bottom: 30px;
}

.btns {
  display: flex;
  width: 300px;
  justify-content: space-between;
}

.button-86 {
  all: unset;
  width: 100px;
  height: 30px;
  font-size: 20px;
  background: transparent;
  border: none;
  position: relative;
  color: #f0f0f0;
  cursor: pointer;
  z-index: 1;
  padding: 10px 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  white-space: nowrap;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.button-86::after,
.button-86::before {
  content: "";
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: -99999;
  transition: all 0.4s;
}

.button-86::before {
  transform: translate(0%, 0%);
  width: 100%;
  height: 100%;
  background: #28282d;
  border-radius: 10px;
}

.button-86::after {
  transform: translate(10px, 10px);
  width: 35px;
  height: 35px;
  background: #ffffff15;
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border-radius: 50px;
}

.button-86:hover::before {
  transform: translate(5%, 20%);
  width: 110%;
  height: 110%;
}

.button-86:hover::after {
  border-radius: 10px;
  transform: translate(0, 0);
  width: 100%;
  height: 100%;
}

.button-86:active::after {
  transition: 0s;
  transform: translate(0, 5%);
}

/* Schedule Section */

.content-table {
  border-collapse: collapse;
  font-size: 0.9em;
  margin: 20px 10%;
  width: 80%;
  border-radius: 5px 5px 0 0;
  overflow: hidden;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
  background-color: #131313;
  margin-top: 10%;
}

.content-table thead tr {
  background-color: #131313;
  color: #ffffff;
  text-align: center;
  font-weight: bold;
  font-size: 2em;
}

.content-table th h2,
.content-table td h2 {
  margin: 0;
  font-size: 1em;
}

.content-table th,
.content-table td {
  padding: 12px 2px;
  text-align: center;
  font-size: 1em;
  color: white;
}

.content-table tbody tr {
  border-bottom: 1px solid #dddddd;
}

.content-table tbody tr:nth-of-type(even) {
  background-color: #202020;
}

.time td {
  border-right: 1px solid #333333;
}

.red {
  background-color: rgb(44, 44, 44);
  color: white;
  border: 1px solid #dddddd;
}

.green {
  background-color: rgb(44, 44, 44);
  color: white;
  border: 1px solid #dddddd;
}

.days {
  display: inline-block;
  margin: 20px 10%;
  width: 80%;
}

.card {
  display: flex;
  align-items: center;
  color: white;
  width: 100%;
  padding: 30px 0;
}

.card h3 {
  font-size: 50px;
  margin-right: 30px;
}

.card h5 {
  font-size: 30px;
}

.card p {
  font-size: 15px;
}

.subjects {
  display: flex;
  height: 100%;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-right: 25px;
}

/* Code Section */

.header-title {
  margin: 60px 0;
}

.header-title .sample {
  font-size: 60px;
}

.header-title .sub-header {
  padding-bottom: 20px;
}

h4 {
  font-size: 25px;
}

.code {
  margin-bottom: 30px;
}

@media (max-width: 875px) {
  .content-table {
    width: 100%;
    margin: 10% 0 0 0;
  }
}

@media (max-width: 768px) {
  .container .headers li {
    display: none;
  }
}

@media (max-width: 503px) {
  .hero h1 {
    font-size: 70px;
  }

  .container .title {
    font-size: 40px;
  }
}

@media (max-width: 480px) {
  .content-table {
    width: 95%;
  }
  input[type="text"],
  textarea {
    width: 75%;
  }
}

